Fix spicy spacing issues

--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -11,11 +11,7 @@
 
     .slider-wrapper {
         position: relative;
-
-        &,
-        * {
-            // max-height: $magic-number;
-        }
+        height: 100%;
 
         &::before {
             content: '';
@@ -35,8 +31,10 @@
     .carousel {
 
         .slide {
-            height: 95%;
+            position: relative;
+            height: calc(100vw * 540 / 1440 + 40px);
             img {
+                height: 100%;
                 object-fit: cover;
             }
 
